tests/ui/invalid_pymethod_names.stderr
error: `name` may only be specified once
  --> tests/ui/invalid_pymethod_names.rs:12:14
   |
12 |     #[getter(number)]
   |              ^^^^^^

error: `name` may only be specified once
  --> tests/ui/invalid_pymethod_names.rs:21:12
   |
21 |     #[pyo3(name = "bar")]
   |            ^^^^^^^^^^^^

error: `name` not allowed with `#[new]`
  --> tests/ui/invalid_pymethod_names.rs:29:19
   |
29 |     #[pyo3(name = "makenew")]
   |                   ^^^^^^^^^

error: expected ident or string literal for property name
  --> tests/ui/invalid_pymethod_names.rs:38:14
   |
38 |     #[getter(1)]
   |              ^

error: expected `#[getter(name)]` to set the name
  --> tests/ui/invalid_pymethod_names.rs:46:14
   |
46 |     #[getter = 1]
   |              ^
